fixed wrapping for item content

--- a/src/style-home.css
+++ b/src/style-home.css
@@ -119,6 +119,7 @@ li:hover {
     display: flex;
     gap: 10px;
     color: grey;
+    white-space: nowrap;
 }
 
 .list-item-icons {
